# django-drf-mcp

./: .gitignore  CLEANUP_SUMMARY.md  INTEGRATION_APPROACHES.md  README.md  SHARING_GUIDE.md  conversation-flow.md  db.sqlite3  manage.py  mcp_integration_code.py  mcp_usage_example.py  pyproject.toml  requirements.txt  test_django_mcp_integration.py
.github/: copilot-instructions.md
core/: __init__.py  django_mcp_middleware.py
django_mcp_project/: asgi.py  mcp_view.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: start_mcp.py
users/migrations/: 0001_initial.py
